Split subtitle from title.
And a little more styling.

--- a/index.haml
+++ b/index.haml
@@ -1,6 +1,7 @@
 ---
 layout: page
-title: Schleuder <small> — a gpg-enabled mailinglist with remailing-capabilities.</small>
+title: Schleuder
+subtitle: A gpg-enabled mailinglist with remailing-capabilities.
 ---
 
 %h3 Stable: version 2
