--- a/_layouts/default.haml
+++ b/_layouts/default.haml
@@ -16,6 +16,18 @@
         float: right;
         margin: 0 0 0 2%;
       }
+      h1 { 
+        padding: 0;
+        margin-bottom: 0;
+      }
+      #subtitle {
+        color: #999999;
+        font-weight: bold;
+        font-size: 1.1em;
+        }
+      header {
+        margin-bottom: 2em;
+      }
   %body
 
     %img#logo{src: 'images/schleuder.png'}
