--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,6 +15,18 @@
         float: right;
         margin: 0 0 0 2%;
       }
+      h1 { 
+        padding: 0;
+        margin-bottom: 0;
+      }
+      #subtitle {
+        color: #999999;
+        font-weight: bold;
+        font-size: 1.1em;
+        }
+      header {
+        margin-bottom: 2em;
+      }
     </style>
   </head>
   <body>
