--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -2,6 +2,7 @@ layout: default
 <div class='page'>
   <header>
     <h1>{{ page.title }}</h1>
+    <div id='subtitle'>{{ page.subtitle }}</div>
   </header>
   <article>{{ content }}</article>
 </div>
