Include gem+sig, fix link

--- a/index.haml
+++ b/index.haml
@@ -13,10 +13,10 @@ subtitle: A gpg-enabled mailinglist with remailing-capabilities.
 %h3 Development: version 3
 %p
   For a peek at the next version of Schleuder install
-  %a{href: 'schleuder-3.0.0.pre.alpha.gem'} schleuder-3.0.0.pre.alpha.gem
+  %a{href: 'download/schleuder-3.0.0.pre.alpha.gem'} schleuder-3.0.0.pre.alpha.gem
   = surround '(', ').' do
     verify with
-    %a{href: 'schleuder-3.0.0.pre.alpha.gem.sig'} schleuder-3.0.0.pre.alpha.gem.sig
+    %a{href: 'download/schleuder-3.0.0.pre.alpha.gem.sig'} schleuder-3.0.0.pre.alpha.gem.sig
 
 %p
   For information on the development of Schleuder v3 see
