Improve text of index-page.

--- a/index.haml
+++ b/index.haml
@@ -27,18 +27,16 @@ subtitle: A gpg-enabled mailinglist with remailing-capabilities.
   We're very much interested in 
   %strong your help!
 
-  We've got enough to do:
+  There's a lot to do:
   %ul
-    %li Improve the code of Schleuder.
     %li Review the code of Schleuder.
-    %li Write a daemon that provides an API for clients (like Webschleuder, the upcoming web-interface).
-    %li Write documentation.
+    %li Improve the code of Schleuder.
+    %li Write documentation, Howtos, helping comics for users as well as admins.
     %li Design documentation and website.
-    %li Create visually helping information for users and admins (e.g. How-To-instructions with screenshots).
-    %li Improve the code of Webschleuder (a RubyOnRails-app).
+    %li Fix and improve the code of Webschleuder (a RubyOnRails-app).
     %li Improve the user-experience of both, Schleuder and Webschleuder.
     %li Create and maintain packages for your OS
-    %li ...
+    %li and more!
 
 %p
   To contact us send an email to
