Link beta1 and improve text a little.

--- a/index.haml
+++ b/index.haml
@@ -12,11 +12,11 @@ subtitle: A gpg-enabled mailinglist with remailing-capabilities.
 
 %h3 Development: version 3
 %p
-  For a peek at the next version of Schleuder install
-  %a{href: 'download/schleuder-3.0.0.pre.alpha.gem'} schleuder-3.0.0.pre.alpha.gem
+  To test the upcoming version of Schleuder install
+  %a{href: 'download/schleuder-3.0.0.beta1.gem'} schleuder-3.0.0.beta1.gem
   = surround '(', ').' do
     verify with
-    %a{href: 'download/schleuder-3.0.0.pre.alpha.gem.sig'} schleuder-3.0.0.pre.alpha.gem.sig
+    %a{href: 'download/schleuder-3.0.0.beta1.gem.sig'} schleuder-3.0.0.beta1.gem.sig
 
 %p
   For information on the development of Schleuder v3 see
@@ -27,16 +27,14 @@ subtitle: A gpg-enabled mailinglist with remailing-capabilities.
   We're very much interested in 
   %strong your help!
 
-  There's a lot to do:
+  %br
+  Opportunities to help include:
   %ul
-    %li Review the code of Schleuder.
-    %li Improve the code of Schleuder.
-    %li Write documentation, Howtos, helping comics for users as well as admins.
-    %li Design documentation and website.
-    %li Fix and improve the code of Webschleuder (a RubyOnRails-app).
-    %li Improve the user-experience of both, Schleuder and Webschleuder.
+    %li Review the code and give feedback on it.
+    %li Suggest improvements to the user-experience of both, Schleuder and Webschleuder.
+    %li Write documentation, Howtos, or even helping comics for users as well as admins.
+    %li Improve the design of documentation and website.
     %li Create and maintain packages for your OS
-    %li and more!
 
 %p
   To contact us send an email to
