A little text work.

--- a/index.haml
+++ b/index.haml
@@ -30,10 +30,11 @@ subtitle: A gpg-enabled mailinglist with remailing-capabilities.
   %br
   Opportunities to help include:
   %ul
+    %li Test the new Schleuder and Webschleuder (we have test-lists for you).
     %li Review the code and give feedback on it.
-    %li Suggest improvements to the user-experience of both, Schleuder and Webschleuder.
-    %li Write documentation, Howtos, or even helping comics for users as well as admins.
+    %li Suggest improvements to Schleuder or Webschleuder.
     %li Improve the design of documentation and website.
+    %li If you're experienced with Schleuder: write howtos for users or admins.
     %li Create and maintain packages for your OS
 
 %p
