Link to README for install-instructions.
Let's repeat them in different places.

--- a/index.haml
+++ b/index.haml
@@ -12,16 +12,14 @@ subtitle: A gpg-enabled mailinglist with remailing-capabilities.
 
 %h3 Development: version 3
 %p
-  To test the upcoming version of Schleuder install
-  %a{href: 'download/schleuder-3.0.0.beta3.gem'} schleuder-3.0.0.beta3.gem
-  = surround '(', ').' do
-    verify with
-    %a{href: 'download/schleuder-3.0.0.beta3.gem.sig'} schleuder-3.0.0.beta3.gem.sig
+  To test the upcoming version of Schleuder please follow instructions from
+  %a{href: 'https://git.codecoop.org/schleuder/schleuder3/blob/master/README.md'} the README
+  and send us feedback!
 
 %p
-  For information on the development of Schleuder v3 see
+  For information on the state of the development see the issue tracker at
   = succeed '.' do
-    %a{href: 'https://git.codecoop.org/schleuder/schleuder3'} https://git.codecoop.org/schleuder/schleuder3
+    %a{href: 'https://git.codecoop.org/schleuder/schleuder3/issues'} https://git.codecoop.org/schleuder/schleuder3/issues
 
 %p
   We're very much interested in 
