Change text on homepage.

--- a/index.haml
+++ b/index.haml
@@ -12,32 +12,53 @@ subtitle: A gpg-enabled mailinglist with remailing-capabilities.
 
 %h3 Development: version 3
 %p
-  To test the upcoming version of Schleuder please follow instructions from
-  %a{href: 'https://git.codecoop.org/schleuder/schleuder3/blob/master/README.md'} the README
-  and send us feedback!
-
-%p
-  For information on the state of the development see the issue tracker at
-  = succeed '.' do
-    %a{href: 'https://git.codecoop.org/schleuder/schleuder3/issues'} https://git.codecoop.org/schleuder/schleuder3/issues
-
-%p
-  We're very much interested in 
+  We're looking for 
   %strong your help!
-
-  %br
-  Opportunities to help include:
+  You could give us a needed push by
   %ul
-    %li Test the new Schleuder and Webschleuder (we have test-lists for you).
-    %li Review the code and give feedback on it.
-    %li Suggest improvements to Schleuder or Webschleuder.
-    %li Improve the design of documentation and website.
-    %li If you're experienced with Schleuder: write howtos for users or admins.
-    %li Create and maintain packages for your OS
+    %li
+      testing Schleuder and Webschleuder from a user-perspective (we can provide you with test-lists, just
+      = succeed ")" do
+        %a{href: 'mailto:schleuder2.nadir.org'} ask
+    %li
+      testing Schleuder and Webschleuder from a list-admin-perspective (we can provide you with test-lists, just
+      = succeed ")" do
+        %a{href: 'mailto:schleuder2.nadir.org'} ask
+    %li testing Schleuder and Webschleuder from a system-admin-perspective (installing, running, etc).
+    %li reviewing the code and give feedback on it.
+    %li
+      suggesting improvements to Schleuder or Webschleuder (via 
+      %a{href: 'https://git.codecoop.org/schleuder/schleuder3/issues'} issue-tracker
+      or 
+      = succeed ")" do
+        %a{href: 'mailto:schleuder2.nadir.org'} email
+    %li suggesting improving for documentation and website
+    %li writing howtos for users or admins (if you're experienced with Schleuder)
+    %li create and maintain packages for your OS (Debian is covered).
 
 %p
-  To contact us send an email to
+  To 
+  %strong
+    install
+  version 3 see
+  = succeed "." do
+    %a{href: 'https://git.codecoop.org/schleuder/schleuder3/blob/master/README.md'} the README
+
+%p
+  To 
+  %strong participate
+  in the development use the
+  = succeed '.' do
+    %a{href: 'https://git.codecoop.org/schleuder/schleuder3/milestones/4'} issue tracker
+  (If you want an account for codecoop.org, 
+  = succeed ').' do
+    %a{href: 'mailto:schleuder2.nadir.org'} contact us
+
+
+%p
+  To 
+  %strong contact
+  us send an email to
   = succeed '.' do
     %a{href: 'mailto:schleuder2.nadir.org'} schleuder2@nadir.org
-
 
