--- a/index.haml
+++ b/index.haml
@@ -17,23 +17,12 @@ subtitle: A gpg-enabled mailinglist with remailing-capabilities.
   You could give us a needed push by
   %ul
     %li
-      testing Schleuder and Webschleuder from a user-perspective (we can provide you with test-lists, just
-      = succeed ")" do
+      testing Schleuder (and maybe Webschleuder) from a user-, list-admin-, or system-admin-perspective (we can provide you with test-lists, just
+      = succeed ")." do
         %a{href: 'mailto:schleuder2.nadir.org'} ask
-    %li
-      testing Schleuder and Webschleuder from a list-admin-perspective (we can provide you with test-lists, just
-      = succeed ")" do
-        %a{href: 'mailto:schleuder2.nadir.org'} ask
-    %li testing Schleuder and Webschleuder from a system-admin-perspective (installing, running, etc).
-    %li reviewing the code and give feedback on it.
-    %li
-      suggesting improvements to Schleuder or Webschleuder (via 
-      %a{href: 'https://git.codecoop.org/schleuder/schleuder3/issues'} issue-tracker
-      or 
-      = succeed ")" do
-        %a{href: 'mailto:schleuder2.nadir.org'} email
-    %li suggesting improving for documentation and website
-    %li writing howtos for users or admins (if you're experienced with Schleuder)
+    %li reviewing the code.
+    %li suggesting improvements to Schleuder or Webschleuder.
+    %li suggesting improving for documentation and website.
     %li create and maintain packages for your OS (Debian is covered).
 
 %p
