--- a/index.haml
+++ b/index.haml
@@ -21,8 +21,8 @@ subtitle: A gpg-enabled mailinglist with remailing-capabilities.
       = succeed ")." do
         %a{href: 'mailto:schleuder2.nadir.org'} ask
     %li reviewing the code.
-    %li suggesting improvements to Schleuder or Webschleuder.
-    %li suggesting improving for documentation and website.
+    %li suggesting improvements to Schleuder (or Webschleuder).
+    %li suggesting improvements for documentation and website.
     %li create and maintain packages for your OS (Debian is covered).
 
 %p
