--- a/index.haml
+++ b/index.haml
@@ -14,7 +14,7 @@ subtitle: A gpg-enabled mailinglist with remailing-capabilities.
 %p
   We're looking for 
   %strong your help!
-  You could give us a needed push by
+  You could give us a hand by:
   %ul
     %li
       testing Schleuder (and maybe Webschleuder) from a user-, list-admin-, or system-admin-perspective (we can provide you with test-lists, just
