alt-attribute for logo

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,7 +30,7 @@
     </style>
   </head>
   <body>
-    <img id='logo' src='images/schleuder.png'>
+    <img id='logo' src='/images/schleuder.png' alt="Logo of schleuder">
     {{ content }}
   </body>
 </html>
