Fix linking to top.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -77,7 +77,7 @@
       }
     </style>
   </head>
-  <body>
+  <body id="top">
     <img id='logo' src='/images/schleuder.png' alt="Logo of schleuder">
     {{ content }}
   </body>
