max-width for body.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,6 +13,7 @@
       body {
         margin: 3%;
         font-family: DroidSans, sans-serif;
+        max-width: 50em;
       }
       #logo {
         float: right;
