.note for documentation

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -76,6 +76,17 @@
         font-style: italic;
         margin: 0.5em 0 0 0;
       }
+      .note {
+        padding: 0.2em 1.5em;
+        font-style: italic;
+      }
+      .note:before {
+        content:"!";
+        font-size: 2em;
+        color: #999999;
+        position: absolute;
+        margin: -0.3em 0 0 -0.6em;
+      }
     </style>
   </head>
   <body id="top">
