Show dt-elements in monospaced font.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -73,8 +73,9 @@
         padding: 1em;
       }
       dt {
-        font-style: italic;
-        margin: 0.5em 0 0 0;
+        font-family: monospace;
+        font-size: 125%;
+        margin: 1em 0 0.2em 0;
       }
       .note {
         padding: 0.2em 1.5em;
