Show code-elements a little bigger.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -72,6 +72,9 @@
       pre {
         padding: 1em;
       }
+      code {
+        font-size: 115%;
+      }
       dt {
         font-family: monospace;
         font-size: 125%;
