default.html: Fix layout of long code snippets
Closes #27

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -70,6 +70,7 @@
         background-color: #f8f8f8;
       }
       pre {
+        display: inline-block;
         padding: 1em;
       }
       code {
