--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -2,10 +2,10 @@
 layout: default
 ---
 
-<div class='docs'>
+<div class='page'>
   <header>
-    <a href='/' id='breadcrumb'>Schleuder</a>
     <h1>{{ page.title }}</h1>
+    <div id='subtitle'>{{ page.subtitle }}</div>
   </header>
   <article>{{ content }}</article>
 </div>
