--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -2,10 +2,10 @@
 layout: default
 ---
 
-<div class='page'>
+<div class='docs'>
   <header>
+    {% include nav-breadcrumbs.html %}
     <h1>{{ page.title }}</h1>
-    <div id='subtitle'>{{ page.subtitle }}</div>
   </header>
   <article>{{ content }}</article>
 </div>
