--- a/_includes/nav-breadcrumbs.html
+++ b/_includes/nav-breadcrumbs.html
@@ -4,8 +4,8 @@
       {% for crumb in breadcrumbs %} 
         {% if forloop.first %}
           <li class="breadcrumb-item breadcrumb-item-icon" property="itemListElement" typeof="ListItem">
-             <a property="item" typeof="WebPage" href="{{ crumb.url | relative_url }}">
-               <img src="/images/schleuder.png" title='Home' alt='Logo: a slingshot' />
+             <a property="item" typeof="WebPage" href="{{ site.url }}{{ site.baseurl }}{{ crumb.url }}">
+                 <img src='{{ "images/schleuder.png" | absolute_url }}' title='Home' alt='Logo: a slingshot' />
                <meta property="position" content="{{ crumb.position }}" />
              </a>
           </li>
@@ -14,7 +14,7 @@
         {% unless forloop.last %}
           <li class="breadcrumb-item" property="itemListElement" typeof="ListItem">
              <div class="separator">/</div>
-             <a property="item" typeof="WebPage" href="{{ crumb.url | relative_url }}">
+             <a property="item" typeof="WebPage" href="{{ site.url }}{{ site.baseurl }}{{ crumb.url }}">
                 <span property="name">{{ crumb.title }}</span>
                 <meta property="position" content="{{ crumb.position }}" />
              </a>
