--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html lang='en'>
   <head>
-    <link href='/favicon.ico' rel='shortcut icon' type='image/x-icon'>
-    <link href='/favicon.ico' rel='icon' type='image/x-icon'>
+    <link href='{{ "favicon.ico" | absolute_url }}' rel='shortcut icon' type='image/x-icon'>
+    <link href='{{ "favicon.ico" | absolute_url }}' rel='icon' type='image/x-icon'>
     <meta charset='UTF-8'>
     <meta content='width=device-width, initial-scale=1' name='viewport'>
     <title>{% if page.title %} {{ page.title }} {% else %} {{ site.title }} {% endif %}</title>
     <meta content='{% if page.excerpt %} {{ page.excerpt | strip_html | strip_newlines | truncate: 160 }} {% else %} {{ site.description }} {% endif %}' name='description'>
-    <link href='/styles.css' rel='stylesheet' media='all'>
+    <link href='{{ "styles.css" | absolute_url }}' rel='stylesheet' media='all'>
   </head>
   <body id="top" class='layout-{{ page.layout }}'>
-    <a href='/'><img id='logo' src='/images/schleuder.png' alt="Logo of schleuder"></a>
+    <a href='{{ "" }}'><img id='logo' src='{{ "images/schleuder.png" | absolute_url }}' alt="Logo of schleuder"></a>
     {{ content }}
   </body>
 </html>
