--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,7 +7,7 @@
     <meta content='width=device-width, initial-scale=1' name='viewport'>
     <title>{% if page.title %} {{ page.title }} {% else %} {{ site.title }} {% endif %}</title>
     <meta content='{% if page.excerpt %} {{ page.excerpt | strip_html | strip_newlines | truncate: 160 }} {% else %} {{ site.description }} {% endif %}' name='description'>
-    <link href='{{ "styles.css" | absolute_url }}' rel='stylesheet' media='all'>
+    <link href='{{ "assets/css/styles.css" | absolute_url }}' rel='stylesheet' media='all'>
   </head>
   <body id="top" class='layout-{{ page.layout }}'>
     <a href='{{ "" }}'><img id='logo' src='{{ "images/schleuder.png" | absolute_url }}' alt="Logo of schleuder"></a>
