--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,8 +9,8 @@
     <meta content='{% if page.excerpt %} {{ page.excerpt | strip_html | strip_newlines | truncate: 160 }} {% else %} {{ site.description }} {% endif %}' name='description'>
     <link href='{{ "assets/css/styles.css" | absolute_url }}' rel='stylesheet' media='all'>
   </head>
-  <body id="top" class='layout-{{ page.layout }}'>
-    <a href='{{ "" }}'><img id='logo' src='{{ "images/schleuder.png" | absolute_url }}' alt="Logo of schleuder"></a>
+  <body>
+    {% include navbar.html %}
     {{ content }}
   </body>
 </html>
