--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -1,8 +1,14 @@
 ---
 ---
+// ↑↑ These dashes are neccessary to enable Jeklyll's sass support
+// https://jekyllrb.com/docs/assets/
+
+@import 'navbar';
+
 // Override bulma variables 
 $family-sans-serif: "DejaVuSans", sans-serif;
 $family-monospace: "DejaVuSansMono", monospace;
+
 @import "bulma";
 
 @font-face{ 
