--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -37,7 +37,7 @@
           <a class="navbar-item" href='{{ "schleuder/docs/server-admins.html" | absolute_url }}'>
             For Server-Admins
           </a>
-          <a class="navbar-item" href="#">
+          <a class="navbar-item" href='{{ "schleuder/docs/projects-and-plugins.html" | absolute_url }}'>
             Projects & Plugins
           </a>
         </div>
