--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,6 +1,6 @@
 <nav class="navbar" role="navigation" aria-label="main navigation">
   <input type="checkbox" id="toggler" role="button" class="toggler" aria-label="menu" aria-expanded="false"
-    data-target="navbarBasicExample" />
+    data-target="navbarMain" />
   <div class="navbar-brand">
     <a class="navbar-item" href='{{ "/" }}'>
       <img src="/assets/images/schleuder.png" alt=width="112" height="28">
@@ -13,7 +13,7 @@
     </label>
   </div>
 
-  <div id="navbarBasicExample" class="navbar-menu">
+  <div id="navbarMain" class="navbar-menu">
     <div class="navbar-start">
       <a class="navbar-item" href="#">
         News
