--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -25,6 +25,15 @@ $family-monospace: "DejaVuSansMono", monospace;
 	margin-bottom: 3em;
 }
 
+h1 {
+	font-size: 2rem;
+	font-weight: 600;
+	line-height: 1.125;
+	margin-top: 1.5rem;
+	margin-bottom: 1.5rem;
+	text-align: center;
+}
+
 .news {
 	h2 {
 		font-size: 2rem;
