--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -6,5 +6,5 @@ layout: default
   <header>
     <h1>{{ page.title }}</h1>
   </header>
-  <article>{{ content }}</article>
+  <article class="content">{{ content }}</article>
 </div>
