--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -7,5 +7,5 @@ layout: default
     <h1>{{ page.title }}</h1>
     <div id='subtitle'>{{ page.subtitle }}</div>
   </header>
-  <article>{{ content }}</article>
+  <article class="content">{{ content }}</article>
 </div>
