--- a/_layouts/news.html
+++ b/_layouts/news.html
@@ -3,6 +3,8 @@ layout: default
 ---
 
 <div class='news'>
-    <h2 class="title">{{ page.title }}</h2>
-    {{ content }}
+    <h1 class="title">{{ page.title }}</h1>
+    <div class="content">
+        {{ content }}
+    </div>
 </div>
