--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,7 +3,7 @@ layout: default
 ---
 
 <div class='post'>
-    <h1 class="title">{{ page.title }}</h1>
-    <h3>{{ page.date | date_to_string: "oh3dinal", "US"}}</h3>
-  <article>{{ content }}</article>
+  <h1 class="title">{{ page.title }}</h1>
+  <h3>{{ page.date | date_to_string: "ordinal", "US"}}</h3>
+  <article class="content">{{ content }}</article>
 </div>
