--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -6,8 +6,12 @@
 @import 'navbar';
 
 // Override bulma variables 
-$family-sans-serif: "DejaVuSans", sans-serif;
+$family-sans-serif: "DejaVuSans",
+sans-serif;
 $family-monospace: "DejaVuSansMono", monospace;
+$green: #336633;
+$green-light: #80FF80;
+$link: $green;
 
 @import "bulma";
 
@@ -34,13 +38,14 @@ h1 {
 
 .news {
 	h2 {
-		font-size: 2rem;
+		font-size: 1.5rem;
 		font-weight: 600;
 		line-height: 1.125;
 		margin-top: 1.5rem;
 	}
 
 	h3 {
+		font-size: 1rem;
 		margin-bottom: 1.5rem;
 		font-family: $family-monospace;
 	}
@@ -50,9 +55,28 @@ h1 {
 	h3 {
 		margin-bottom: 1.5rem;
 		font-family: $family-monospace;
-		text-align: center;
 	}
-	h1 {
-		text-align: center;
-	}
+}
+
+a.navbar-item:focus,
+a.navbar-item:focus-within,
+a.navbar-item:hover,
+a.navbar-item.is-active,
+.navbar-link:focus,
+.navbar-link:focus-within,
+.navbar-link:hover,
+.navbar-link.is-active, 
+.content a
+ {
+	background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(255, 255, 255, 0)), color-stop(35%, rgba(255, 255, 255, 0)), color-stop(35%, #80FF80), color-stop(75%, #80FF80), color-stop(75%, rgba(255, 255, 255, 0)));
+	background-image: -webkit-linear-gradient(top, rgba(255, 255, 255, 0), rgba(255, 255, 255, 0) 35%, #80FF80 35%, #80FF80 75%, rgba(255, 255, 255, 0) 75%);
+	background-image: -o-linear-gradient(top, rgba(255, 255, 255, 0), rgba(255, 255, 255, 0) 35%, #80FF80 35%, #80FF80 75%, rgba(255, 255, 255, 0) 75%);
+	background-image: linear-gradient(to bottom,
+
+			rgba(255, 255, 255, 0), rgba(255, 255, 255, 0) 35%, #80FF80 35%, #80FF80 75%,
+			rgba(255, 255, 255, 0) 75%);
+
+	background-clip: content-box, padding-box;
+	text-decoration: none !important;
+	color: black;
 }
