--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang='en'>
+<html lang='en' class="has-navbar-fixed-top">
   <head>
     <link href='{{ "favicon.ico" | absolute_url }}' rel='shortcut icon' type='image/x-icon'>
     <link href='{{ "favicon.ico" | absolute_url }}' rel='icon' type='image/x-icon'>
