Move links into new footer and rename the old one
* Move contact and schleuder announce links into global footer
* Rename old footer into participate

--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -80,3 +80,9 @@ a.navbar-item.is-active,
 	text-decoration: none !important;
 	color: black;
 }
+
+.footer a {
+	background-image: none;
+	text-decoration: underline !important;
+	font-weight: bold;
+}
