--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,4 +1,4 @@
-<nav class="navbar is-spaced is-fixed-top" role="navigation" aria-label="main navigation">
+<nav class="navbar is-fixed-top" role="navigation" aria-label="main navigation">
   <input type="checkbox" id="toggler" role="button" class="toggler" aria-label="menu" aria-expanded="false"
     data-target="navbarMain" />
   <div class="navbar-brand">
