--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -29,6 +29,11 @@ $link: $green;
 	margin-bottom: 3em;
 }
 
+.main-content {
+	margin-top: 4em;
+	margin-bottom: 4em;
+}
+
 h1 {
 	font-size: 2rem;
 	font-weight: 600;
