Make footer stick to bottom

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang='en' class="has-navbar-fixed-top fixed">
+<html lang='en' class="has-navbar-fixed-top">
 
 <head>
   <link href='{{ "favicon.ico" | absolute_url }}' rel='shortcut icon' type='image/x-icon'>
@@ -15,7 +15,7 @@
 
 <body>
   {% include navbar.html %}
-  <main class="main-content ">
+  <main class="main-content">
     <div class="columns">
       <div class="column is-offset-2-desktop is-two-thirds-desktop is-offset-1-mobile is-four-fifths-mobile">
         {{ content }}
