--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -3,7 +3,7 @@
     data-target="navbarMain" />
   <div class="navbar-brand">
     <a class="navbar-item" href='{{ "/" }}'>
-      <img src="/assets/images/schleuder.png" alt=width="112" height="28">
+      <img src='{{ "/assets/images/schleuder.png" | absolute_url }}'' alt=width="112" height="28">
     </a>
 
     <label for="toggler" class="navbar-burger burger" >
