--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -15,7 +15,7 @@
 
   <div id="navbarMain" class="navbar-menu">
     <div class="navbar-start">
-      <a class="navbar-item" href="#">
+      <a class="navbar-item" href='{{ "news.html" | absolute_url }}'>
         News
       </a>
 
