Make codespell happy

--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -1,6 +1,6 @@
 ---
 ---
-// ↑↑ These dashes are neccessary to enable Jeklyll's sass support
+// ↑↑ These dashes are necessary to enable Jeklyll's sass support
 // https://jekyllrb.com/docs/assets/
 
 @import 'navbar';
