--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,9 +1,9 @@
-<nav class="navbar is-fixed-top" role="navigation" aria-label="main navigation">
+<nav class="navbar is-fixed-top is-spaced" role="navigation" aria-label="main navigation">
   <input type="checkbox" id="toggler" role="button" class="toggler" aria-label="menu" aria-expanded="false"
     data-target="navbarMain" />
   <div class="navbar-brand">
     <a class="navbar-item" href='{{ "/" }}'>
-      <img src='{{ "/assets/images/schleuder.png" | absolute_url }}'' alt=width="112" height="28">
+      <img src='{{ "/assets/images/schleuder_logo_small.svg" | absolute_url }}'' alt="schleuder">
     </a>
 
     <label for="toggler" class="navbar-burger burger" >
@@ -14,7 +14,7 @@
   </div>
 
   <div id="navbarMain" class="navbar-menu">
-    <div class="navbar-start">
+    <div class="navbar-end">
       <a class="navbar-item" href='{{ "news.html" | absolute_url }}'>
         News
       </a>
