--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,7 @@
 <footer class="footer">
   <div class="content has-text-centered">
     <p>
-      <a href="/contact.html">Contact</a> | <a href="https://lists.nadir.org/mailman/listinfo/schleuder-announce">Subscribe to our Mailinglist</a>
+      <a href="https://lists.nadir.org/mailman/listinfo/schleuder-announce">Subscribe to our Mailinglist</a>
     </p>
     <p>
       To suggest changes to these documents, or if you found any errors in them, please <a href="/contact.html">please let us know</a>.
