Style index page

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -3,7 +3,7 @@
     data-target="navbarMain" />
   <div class="navbar-brand">
     <a class="navbar-item" href='{{ "/" }}'>
-      <img src='{{ "/assets/images/schleuder_logo_small.svg" | absolute_url }}'' alt="schleuder">
+      <img src='{{ "/assets/images/schleuder_logo_small.svg" | absolute_url }}' alt="schleuder">
     </a>
 
     <label for="toggler" class="navbar-burger burger" >
