--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -15,6 +15,7 @@ $link: black;
 $text: black;
 $navbar-item-color: black;
 $navbar-item-hover-background-color: white;
+$navbar-dropdown-item-hover-background-color: white;
 
 
 @import "bulma";
@@ -48,6 +49,28 @@ h1 {
 	font-weight: 600;
 	line-height: 1.125;
 	margin-bottom: 1.5rem;
+	font-family: $family-monospace;
+}
+
+.console {
+	background-color: black;
+	color: $green-light;
+	font-family: $family-monospace;
+	font-size: 1.5rem;
+	padding: 4rem;
+}
+
+.has-padding {
+	padding: 3rem;
+}
+
+.tile.is-child {
+	margin-bottom: 4rem !important;
+}
+
+.title {
+	font-family: $family-monospace;
+	font-size: 1.5rem;
 }
 
 .news {
