Add some margin to footer content

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,7 +3,7 @@
     <p>
       <a href="https://lists.nadir.org/mailman/listinfo/schleuder-announce">Subscribe to our Mailinglist</a>
     </p>
-    <p>
+    <p class="margin-top">
       To suggest changes to these documents, or if you found any errors in them, please <a href="/contact.html">please let us know</a>.
       You can also <a href="https://0xacab.org/schleuder/schleuder-website/commits/master">see their history</a>.
     </p>
