--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -150,3 +150,9 @@ a.navbar-item.is-active,
 .highlighter-rouge {
 	margin-bottom: 1rem;
 }
+
+.note {
+	font-style: italic;
+	border: 2px solid $green-light;
+	padding: 0.5rem;
+}
