--- a/_includes/home_tiles.html
+++ b/_includes/home_tiles.html
@@ -35,7 +35,7 @@
     <article class="tile is-child">
       <p class="title">Documentation</p>
       <div class="content">
-        <p>Are you ar subscriber, a list admin or a server admin? Find the docs for your use case.</p>
+        <p>Are you a subscriber, a list admin or a server admin? Find the docs for your use case.</p>
         <a href='{{ "schleuder/docs/index.html" | absolute_url }}'>More</a>
       </div>
     </article>
