--- a/_includes/home_tiles.html
+++ b/_includes/home_tiles.html
@@ -1,7 +1,7 @@
 <div class="tile is-ancestor">
   <div class="tile is-parent">
     <article class="tile is-child">
-      <p class="console">{{ page.title }}: {{ page.subtitle }}</p>
+      <p class="console">{{ page.subtitle }}</p>
     </article>
   </div>
   <div class="tile is-parent">
@@ -17,7 +17,7 @@
     <article class="tile is-child">
       <p class="title">How it works</p>
       <div class="content">
-        <p>Schleuder is a group's email-gateway: subscribers can exchange encrypted emails among themselves, receive emails from non-subscribers and send emails to non-subscribers via the list.</p>
+        <p>Schleuder is a group's email-gateway: subscribers can exchange OpenPGP-encrypted emails among themselves, receive emails from non-subscribers and send emails to non-subscribers via the list.</p>
         <a href='{{ "schleuder/docs/concept.html" | absolute_url }}'>More</a>
       </div>
     </article>
