Use scroll-padding-top to prevent overlapping content
Otherwise content is hidden behind the sticky header.

closes #54

--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -30,6 +30,10 @@ $navbar-dropdown-item-hover-background-color: white;
 	src: url('/assets/fonts/DejaVuSansMono-webfont.woff')
 }
 
+html {
+  scroll-padding-top: 5.6rem; /* height of sticky header plus margins */
+}
+
 .navbar {
 	margin-bottom: 3em;
 }
