List schleuder providers

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -40,6 +40,9 @@
           <a class="navbar-item" href='{{ "schleuder/docs/projects-and-plugins.html" | absolute_url }}'>
             Projects & Plugins
           </a>
+          <a class="navbar-item" href='{{ "schleuder/docs/providers.html" | absolute_url }}'>
+            Providers
+          </a>
         </div>
       </div>
 
